# cam-geom

./: .gitignore  Cargo.toml  README.md  README.tpl
.github/workflows/: rust.yml
benches/: my_benchmark.rs
examples/: 3d-to-2d.rs  ray-intersect.rs  render-cube.rs
src/: camera.rs  extrinsics.rs  intrinsic_test_utils.rs  intrinsics_orthographic.rs  intrinsics_perspective.rs  lib.rs  linearize.rs  ray_bundle_types.rs  ray_intersection.rs
