[package]
name = "cam-geom"
version = "0.1.3"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
description = "Geometric models of cameras for photogrammetry"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/strawlab/cam-geom"
keywords = ["computer", "vision", "photogrammetry"]
categories = ["algorithms", "computer-vision", "no-std", "science", "science::robotics"]

[dependencies]
nalgebra = {version="0.20", default-features=false}
approx = {version="0.3", default-features=false}
num-iter = {version="0.1.40", default-features=false, optional=true}
itertools = {version="0.9", default-features=false}
serde = {version="1.0", default-features=false, features=["derive"], optional=true}

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]

std = ["nalgebra/std", "num-iter"]
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[package.metadata.docs.rs]
features = ["serde-serialize"]
