[package]
name = "cam-geom"
version = "0.15.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
description = "Geometric models of cameras for photogrammetry"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/strawlab/cam-geom"
keywords = ["computer", "vision", "photogrammetry"]
categories = [
    "algorithms",
    "computer-vision",
    "no-std",
    "science",
    "science::robotics",
]
rust-version = "1.65"

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
approx = { version = "0.5", default-features = false }
num-iter = { version = "0.1.40", default-features = false, optional = true }
itertools = { version = "0.14", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]

std = ["nalgebra/std", "dep:num-iter", "alloc"]
serde-serialize = ["dep:serde", "nalgebra/serde-serialize"]
alloc = ["nalgebra/alloc"]

[package.metadata.docs.rs]
features = ["serde-serialize"]
rustdoc-args = ["--cfg", "docsrs"]
